--- a/css2/styles2.css
+++ b/css2/styles2.css
@@ -10,50 +10,54 @@ h1{
     top: 40px;
     
 }
-.kontaktitiedot
+.otsikko2
 {
-    background-color: white;
-    margin-right: 313px;
-    top: 375px;
-    position: absolute;
+    margin-left: -48px;
+    
 }
-.kontaktimetodit{
-    position: absolute;
-    margin-left: 257px;
-    top: 416px;
-    background-color: white;
-}
-
-
-.container
+.messagelaatikko
 {
-    width: 90%;
-    max-width: 500px;
+    margin-left: -45px;
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: -15%;
+}
+.attachfile
+{
+    margin-left: -46px;
+    margin-top: 10px;
+    
+    
+}
+.buttoni{
+    width: 3.2em;  height: 1.7em;
+    
+}
+.nappi{
+    margin-left: -46px;
+}
+.origcont{
+    align-items: center;
+    
+}
+.container1
+{
+    width: 50%;
+    max-width: 440px;
     margin: 0 auto;
-    padding: 20px;
-    box-shadow: 0px 0px 20px #00000010;
-    background-color: white;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: grey;
+    padding: 10px;
+    margin-top: 100px;
+}
+.container2
+{
+    width: 50%;
+    max-width: 440px;
+    margin: 0 auto;
+    padding: 60px;
+    margin-bottom: 40px;
 }
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-body{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-section{
-    height: 100vh;
-    width: 100%;
-    background-color: white;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-
-
 }
